--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test Two Google</title>
+    <title>Test 5 Google</title>
 </head>
 <body>
-<h1> Frist Header</h1>
+<h1> First Header</h1>
 <p>My paragraph</p>
 <p>Three</p>
-<h2>My 4th try</h2>
+<h2>My 5th try</h2>
 </body>
 </html>
